Re-added test for audit log and server controller
